<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    android:gravity="center">

    <ImageView
        android:layout_marginTop="20dp"
        android:id="@+id/imageView3"
        android:layout_marginBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_icon" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingBottom="30dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/email"
        android:backgroundTint="@color/colorBlue"
        android:fontFamily="@font/asap"
        android:textSize="15sp"
        android:inputType="text|textEmailAddress" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">



        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingBottom="30dp"
            android:backgroundTint="@color/colorBlue"
            android:ems="10"
            android:hint="@string/password"

            android:fontFamily="@font/asap"
            android:textSize="15sp"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/passwordEditText"
            android:layout_alignBottom="@+id/passwordEditText"
            android:paddingEnd="5dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="33dp"
            android:focusedByDefault="false"
            android:fontFamily="@font/asap_medium"
            android:linksClickable="true"
            android:text="@string/forgot_password"
            android:background="#FFFFFF"
            android:textColor="@color/colorBlue"
            android:textSize="15sp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/signUpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/loginButton"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/asap_medium"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorBlue"
            android:textSize="15sp"
            android:linksClickable="true"
            android:text="@string/sign_up_label" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"

            android:layout_alignParentBottom="true"

            android:layout_centerHorizontal="true"

            android:background="@drawable/button_disabled"
            android:fontFamily="@font/asap_medium"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:enabled="true"
            android:textSize="15sp" />
    </RelativeLayout>

</LinearLayout>